--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Projeto 1 -->
                 <div class="bg-white rounded-lg shadow-xl flex flex-col items-center p-6 text-center">
-                    <a href="https://contratoia.netlify.app/#home" target="_blank">
+                    <a href="https://contrato-ai.netlify.app/" target="_blank">
                         <img src="https://i.ibb.co/5WDJPR8D/Copilot-20250907-161721.png" alt="Ícone do site Contrato IA" class="h-24 w-24 object-cover rounded-lg shadow-md hover:opacity-80 transition-opacity mb-4">
                     </a>
                     <h3 class="text-xl font-bold mb-1">Gerador de Contratos com IA</h3>
                     <p class="text-gray-600 mb-4 flex-grow">Automatiza a criação de contratos com IA, simplificando processos burocráticos.</p>
-                    <a href="https://contratoia.netlify.app/#home" target="_blank" class="mt-auto inline-block bg-sky-500 text-white px-6 py-2 rounded-md hover:bg-sky-600 transition duration-300 font-semibold">
+                    <a href="https://contrato-ai.netlify.app/" target="_blank" class="mt-auto inline-block bg-sky-500 text-white px-6 py-2 rounded-md hover:bg-sky-600 transition duration-300 font-semibold">
                         Visitar o Site
                     </a>
                 </div>
@@ -366,3 +366,4 @@
 
 </body>
 </html>
+
