--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
 
                 <!-- Projeto 2 (Placeholder) -->
                 <div class="bg-white rounded-lg shadow-xl flex flex-col items-center p-6 text-center border-2 border-dashed border-gray-300">
-                    <div class="h-24 w-24 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
-                        <i class="fas fa-plus fa-2x text-gray-400"></i>
-                    </div>
-                    <h3 class="text-xl font-bold mb-1 text-gray-500">Projeto Futuro</h3>
-                    <p class="text-gray-500 mb-4 flex-grow">A descrição do seu próximo projeto incrível aparecerá aqui.</p>
-                    <button disabled class="mt-auto inline-block bg-gray-300 text-gray-500 px-6 py-2 rounded-md cursor-not-allowed">
-                        Em Breve
-                    </button>
+                   <a href="https://tensor.art/u/625775661558168180" target="_blank">
+                        <img src="https://i.ibb.co/5WDJPR8D/Copilot-20250907-161721.png" alt="Ícone de criação de Imagem" class="h-24 w-24 object-cover rounded-lg shadow-md hover:opacity-80 transition-opacity mb-4">
+                    </a>
+                    <h3 class="text-xl font-bold mb-1">Gerador de Contratos com IA</h3>
+                    <p class="text-gray-600 mb-4 flex-grow">Crie uma imagem no mesmo estilo de mesu desenhos</p>
+                    <a href="https://tensor.art/u/625775661558168180" target="_blank" class="mt-auto inline-block bg-sky-500 text-white px-6 py-2 rounded-md hover:bg-sky-600 transition duration-300 font-semibold">
+                        Visitar o Site
+                    </a>
                 </div>
                 
                 <!-- Projeto 3 (Placeholder) -->
@@ -366,4 +366,5 @@
 
 </body>
 </html>
+
 
